# RAG_colpali

./: README.md  finetuning_colpali.ipynb  pyproject.toml  using_colpali.ipynb
latex/: main.bib  main.tex  tufte-common.def  tufte_preamble.tex
